# ggml

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel
examples/: BUILD.bazel
examples/gpt-2/: BUILD.bazel
examples/gpt-j/: BUILD.bazel
examples/mnist/: BUILD.bazel
examples/perf-metal/: BUILD.bazel
examples/python/: BUILD.bazel
examples/sam/: BUILD.bazel
examples/simple/: BUILD.bazel
examples/yolo/: BUILD.bazel
include/: BUILD.bazel
src/: BUILD.bazel
src/ggml-blas/: BUILD.bazel
src/ggml-cann/: BUILD.bazel
src/ggml-cpu/: BUILD.bazel
src/ggml-cpu/amx/: BUILD.bazel
src/ggml-cpu/arch/arm/: BUILD.bazel
src/ggml-cpu/arch/powerpc/: BUILD.bazel
src/ggml-cpu/arch/riscv/: BUILD.bazel
src/ggml-cpu/arch/s390/: BUILD.bazel
src/ggml-cpu/kleidiai/: BUILD.bazel
src/ggml-cpu/llamafile/: BUILD.bazel
src/ggml-cuda/vendors/: BUILD.bazel
src/ggml-kompute/: BUILD.bazel
src/ggml-metal/: BUILD.bazel
src/ggml-opencl/: BUILD.bazel
src/ggml-rpc/: BUILD.bazel
src/ggml-sycl/: BUILD.bazel
src/ggml-sycl/dpct/: BUILD.bazel
src/ggml-vulkan/: BUILD.bazel
src/ggml-vulkan/vulkan-shaders/: BUILD.bazel
tests/: BUILD.bazel
