load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "mnist-common",
    srcs = ["mnist-common.cpp"],
    hdrs = ["mnist-common.h"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "mnist-eval",
    srcs = ["mnist-eval.cpp"],
    deps = [":mnist-common"],
)

cc_binary(
    name = "mnist-train",
    srcs = ["mnist-train.cpp"],
    deps = [":mnist-common"],
)
