load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "yolo-image",
    srcs = ["yolo-image.cpp"],
    hdrs = ["yolo-image.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@stb//:stb_image",
        "@stb//:stb_image_write",
    ],
)

cc_binary(
    name = "yolov3-tiny",
    srcs = ["yolov3-tiny.cpp"],
    deps = [":yolo-image"],
)
